# hello_app

./: README.md  config.py  db.py  docker-compose.yml  dockerfile  init.sql  main.py  pyproject.toml
.github/workflows/: ci-cd.yml
app/: config.py  db.py  main.py  models.py
app/tests/: test_db.py  test_main.py
deployment/: Chart.yaml  values.yaml
deployment/files/: init.sql
deployment/templates/: configmap.yaml  deployment.yaml  ingress.yaml  secret.yaml  service.yaml
gitops_repo/: deployment.yml
